// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct description 1`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone in your company with the link or people invited to this file can access"
    id="boxui.unifiedShare.peopleInCompanyCanAccessFile"
    values={
      {
        "company": "",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct description 2`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone at {company} with the link or people invited to this file can access"
    id="boxui.unifiedShare.peopleInSpecifiedCompanyCanAccessFile"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct description 3`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone in your company with the link or people invited to this folder can access"
    id="boxui.unifiedShare.peopleInCompanyCanAccessFolder"
    values={
      {
        "company": "",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct description 4`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone at {company} with the link or people invited to this folder can access"
    id="boxui.unifiedShare.peopleInSpecifiedCompanyCanAccessFolder"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct description 5`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone in your company with the link or people invited to this hub can access"
    id="boxui.unifiedShare.peopleInCompanyCanAccessHub"
    values={
      {
        "company": "",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct description 6`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone at {company} with the link or people invited to this hub can access"
    id="boxui.unifiedShare.peopleInSpecifiedCompanyCanAccessHub"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in item should render correct description 1`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Only invited people can access this file"
    id="boxui.unifiedShare.peopleInItemCanAccessFile"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in item should render correct description 2`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Only invited people can access this folder"
    id="boxui.unifiedShare.peopleInItemCanAccessFolder"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in item should render correct description 3`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Only invited people can access this hub"
    id="boxui.unifiedShare.peopleInItemCanAccessHub"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people with link should render correct description 1`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Publicly accessible and no sign-in required"
    id="boxui.unifiedShare.peopleWithLinkDescription"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people with link should render correct description 2`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Publicly accessible and no sign-in required"
    id="boxui.unifiedShare.peopleWithLinkDescription"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people with link should render correct description 3`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Publicly accessible, sign-in required"
    id="boxui.unifiedShare.peopleWithLinkSignedInRequiredDescription"
    values={
      {
        "company": "Box",
      }
    }
  />
</small>
`;
